# BeamTracks

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
apps/beamtracks-sdk/: pyproject.toml
apps/beamtracks-sdk/examples/: basic_ping.py
apps/beamtracks-sdk/src/beamtracks_sdk/: agent.py  http.py
apps/beamtracks_cli/: .formatter.exs  README.md  beamtracks  dagger.json  mix.exs
apps/beamtracks_cli/lib/: beamtracks_cli.ex
apps/pulsekeeper/: dagger.json  dagger.py  gleam.toml  manifest.toml
apps/pulsekeeper/src/: pulsekeeper.gleam
apps/trackrunner/: .gitignore  dagger.json  package-lock.json
apps/trackrunner/assets/: tailwind.config.js
apps/trackrunner/config/: dev.exs  prod.exs  runtime.exs
apps/trackrunner/lib/: trackrunner.ex
apps/trackrunner/test/: test_helper.exs
dagger/: build.sh  dev.sh  serve-pulsekeeper.sh  serve-trunner.sh  serve.sh
ethics/: open_ethics_protocol.md
pulsekeeper/: README.md  gleam.toml
pulsekeeper/src/: pulsekeeper.gleam  test_graphs.gleam  tool_graph.gleam
pulsekeeper/test/: tool_graph_test.gleam
trackrunner/: .envrc  .gitignore  ETHICS_TAG.md  README.md  mix.exs
trackrunner/config/: config.exs  test.exs
trackrunner/lib/: trackrunner_web.ex
trackrunner/lib/pulsekeeper/: server.ex  test_graph.ex
trackrunner/lib/trackrunner/: agent_channel_manager.ex  agent_fleet.ex  agent_node.ex  application.ex  beacon.ex  conventions.ex  fleet_score_cache.ex  registry.ex  relay_context.ex  reserved_agent_pool.ex  tool_contract.ex  (+5 more)
trackrunner/scripts/: test_ping.exs
trackrunner/test/: test_helper.exs
(+102 files in other folders)
