[project]
name = "beamtracks-sdk"
version = "0.1.0"
description = "BeamTracks Python SDK – ping convention and beyond"
authors = [
  { name = "Rahmi Pruitt", email = "rjpruitt16@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

